--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>D3 Test</title>
+    <title>My D3 Test</title>
     <link rel="stylesheet" href="style.css">
-    <script src="helloworld.js" type="text/javascript" ></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="300" height="180">
