--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>My D3 Test</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src="d3.min.js"></script>
+
   </head>
   <body>
+    <!-- Here is tutorial from Intro to d3 -->
     <svg width="300" height="180">
       <circle cx="30"  cy="50" r="25" />
       <circle cx="90"  cy="50" r="25" class="fancy" />
@@ -52,6 +54,11 @@
         </g>
       </g>
     </svg>
+  <!-- Here is tutorial from Dashing D3 -->
+    <svg width="50" height="50" class="red">
+      <circle r="25" cx="25" cy="25" fill="purple"/>
+    </svg>
 
+        <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
