D3.js Path Data Generator Line

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My D3 Test</title>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v4.0.0-alpha.44.min.js"></script>
 
   </head>
   <body>
